<resources>
    <string name="app_name">newweek3</string>
    <string name="ip_fname">ชื่อ</string>
    <string name="ip_lname">นามสกกุล</string>
    <string name="ip_number">รหัสประจำตัว</string>
    <string name="ip_sex">เพศ</string>
    <string name="ip_email">อีเมลล์</string>

    <string name="tv_header1">กรอกข้อมูล</string>
    <string name="tv_header2">ข้อมูลของคุณ</string>
    <string name="btn_send">ส่งข้อมูล</string>
    <string name="btn_clear">ล้างข้อมูล</string>
    <string name="btn_close">ปิดโปรแกรม</string>
    <string name="btn_back">กลับ</string>
</resources>
