<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E78263"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tv_header1"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ip_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/ip_fname"
        android:textColor="#C21717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <TextView
        android:id="@+id/ip_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ip_lname"
        android:textColor="#33B1A3"
        app:layout_constraintStart_toStartOf="@+id/ip_fname"
        app:layout_constraintTop_toBottomOf="@+id/ip_fname" />

    <TextView
        android:id="@+id/ip_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ip_number"
        android:textColor="#2E8F0C"
        app:layout_constraintStart_toStartOf="@+id/ip_lname"
        app:layout_constraintTop_toBottomOf="@+id/ip_lname" />

    <TextView
        android:id="@+id/ip_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ip_sex"
        android:textColor="#1F0850"
        app:layout_constraintStart_toStartOf="@+id/ip_number"
        app:layout_constraintTop_toBottomOf="@+id/ip_number" />

    <TextView
        android:id="@+id/ip_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ip_email"
        android:textColor="#641057"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/ip_sex"
        app:layout_constraintTop_toBottomOf="@+id/ip_sex" />

    <Button
        android:id="@+id/btn__send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_send"
        android:textColor="#D8CFCF"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
        app:layout_constraintEnd_toStartOf="@+id/btn_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:text="@string/btn_clear"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/btn_close"
        android:textColor="#F3F2F2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toEndOf="@+id/ip_fname"
        app:layout_constraintTop_toBottomOf="@+id/tv_header1" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_fname"
        app:layout_constraintStart_toStartOf="@+id/et_fname"
        app:layout_constraintTop_toBottomOf="@+id/et_fname" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_lname"
        app:layout_constraintStart_toStartOf="@+id/et_lname"
        app:layout_constraintTop_toBottomOf="@+id/et_lname" />

    <EditText
        android:id="@+id/et_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_number"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_sex"
        app:layout_constraintTop_toBottomOf="@+id/et_sex" />

</androidx.constraintlayout.widget.ConstraintLayout>